--- a/oncoFinder2/templates/report/gsk_prj2_1d.html
+++ b/oncoFinder2/templates/report/gsk_prj2_1d.html
@@ -1575,7 +1575,7 @@ $('#tbl-mhc').on( 'draw.dt', function () {
             	     'type': 'GET',
             	     'data':{
             	    	     reportID: {{report.id}},
-            	    	     file_name: 'Extended/top5_FC_full_score_result.csv'
+            	    	     file_name: 'Extended/New_top5_FC_whole.csv'
             	            },
            
             
@@ -1603,7 +1603,7 @@ $('#tbl-mhc').on( 'draw.dt', function () {
             	     'type': 'GET',
             	     'data':{
             	    	     reportID: {{report.id}},
-            	    	     file_name: 'Extended/Top_model_FC_final.csv'
+            	    	     file_name: 'Extended/New_top_model_FC_whole.csv'
             	            },        	      
             
         },"deferRender": true }); 
@@ -1626,7 +1626,7 @@ $('#tbl-mhc').on( 'draw.dt', function () {
             	     'type': 'GET',
             	     'data':{
             	    	     reportID: {{report.id}},
-            	    	     file_name: 'Extended/top5_FC_EC_full_score_result.csv'
+            	    	     file_name: 'Extended/New_top5_FC_EC.csv'
             	            },        	      
             
         },"deferRender": true });
@@ -1649,7 +1649,7 @@ $('#tbl-mhc').on( 'draw.dt', function () {
             	     'type': 'GET',
             	     'data':{
             	    	     reportID: {{report.id}},
-            	    	     file_name: 'Extended/Top_model_FC_EC.csv'
+            	    	     file_name: 'Extended/New_top_model_FC_EC.csv'
             	            },        	      
             
         },"deferRender": true });
@@ -1672,7 +1672,7 @@ $('#tbl-mhc').on( 'draw.dt', function () {
             	     'type': 'GET',
             	     'data':{
             	    	     reportID: {{report.id}},
-            	    	     file_name: 'Extended/top5_FC_SM_full_score_result.csv'
+            	    	     file_name: 'Extended/New_top5_FC_SM.csv'
             	            },        	      
             
         },"deferRender": true });
@@ -1695,7 +1695,7 @@ $('#tbl-mhc').on( 'draw.dt', function () {
             	     'type': 'GET',
             	     'data':{
             	    	     reportID: {{report.id}},
-            	    	     file_name: 'Extended/Top_model_FC_SM.csv'
+            	    	     file_name: 'Extended/New_top_model_FC_SM.csv'
             	            },        	      
             
         },"deferRender": true });
@@ -1720,7 +1720,7 @@ var top5_fc_ex = $("#tbl-top5_fc_ex").DataTable( {
             	     'type': 'GET',
             	     'data':{
             	    	     reportID: {{report.id}},
-            	    	     file_name: 'Extended/top5_FC_ext_full_score_result.csv'
+            	    	     file_name: 'Extended/New_top5_FC_ext_whole.csv'
             	            },        	      
             
         },"deferRender": true });
@@ -1743,7 +1743,7 @@ var top5_fc_ex = $("#tbl-top5_fc_ex").DataTable( {
             	     'type': 'GET',
             	     'data':{
             	    	     reportID: {{report.id}},
-            	    	     file_name: 'Extended/Top_model_FC_ext.csv'
+            	    	     file_name: 'Extended/New_top_model_FC_ext_whole.csv'
             	            },        	      
             
         },"deferRender": true }); 
@@ -1766,7 +1766,7 @@ var top5_fc_ex = $("#tbl-top5_fc_ex").DataTable( {
             	     'type': 'GET',
             	     'data':{
             	    	     reportID: {{report.id}},
-            	    	     file_name: 'Extended/top5_FC_ext_EC_full_score_result.csv'
+            	    	     file_name: 'Extended/New_top5_FC_ext_EC.csv'
             	            },        	      
             
         },"deferRender": true });
@@ -1789,7 +1789,7 @@ var top5_fc_ex = $("#tbl-top5_fc_ex").DataTable( {
             	     'type': 'GET',
             	     'data':{
             	    	     reportID: {{report.id}},
-            	    	     file_name: 'Extended/Top_model_FC_ext_EC.csv'
+            	    	     file_name: 'Extended/New_top_model_FC_ext_EC.csv'
             	            },        	      
             
         },"deferRender": true });
@@ -1812,7 +1812,7 @@ var top5_fc_ex = $("#tbl-top5_fc_ex").DataTable( {
             	     'type': 'GET',
             	     'data':{
             	    	     reportID: {{report.id}},
-            	    	     file_name: 'Extended/top5_FC_ext_SM_full_score_result.csv'
+            	    	     file_name: 'Extended/New_top5_FC_ext_SM.csv'
             	            },        	      
             
         },"deferRender": true });
@@ -1835,7 +1835,7 @@ var top5_fc_ex = $("#tbl-top5_fc_ex").DataTable( {
             	     'type': 'GET',
             	     'data':{
             	    	     reportID: {{report.id}},
-            	    	     file_name: 'Extended/Top_model_FC_ext_SM.csv'
+            	    	     file_name: 'Extended/New_top_model_FC_ext_SM.csv'
             	            },        	      
             
         },"deferRender": true });
