--- a/oncoFinder2/templates/report/gsk_prj2_1d.html
+++ b/oncoFinder2/templates/report/gsk_prj2_1d.html
@@ -498,6 +498,28 @@
   
   </div>
 
+ <br/>
+  <hr/>
+    <h4>Variable importance plot. Pathways important for separation between MAN and no side effect in random forest model</h4> 
+  <center>
+  <img src='/media/report-portal/gsk_prj2_4d_high/varImp.EndothelialCells.bool.png' width='800px'/>
+  <h4>Endothelial Cells</h4>
+  <br/><br/>
+  
+  <img src='/media/report-portal/gsk_prj2_4d_high/varImp.SmoothMuscle.bool.png' width='800px'/>
+  <h4>Smooth Muscle </h4>
+  <br/><br/>
+  
+  <img src='/media/report-portal/gsk_prj2_4d_high/varImp.EndothelialCells.fillone.png' width='800px'/>
+  <h4>Endothelial Cells (exended dataset)</h4>
+  <br/><br/>
+  
+  <img src='/media/report-portal/gsk_prj2_4d_high/varImp.SmoothMuscle.fillone.png' width='800px'/>
+  <h4>Smooth Muscle (exended dataset)</h4>
+  <br/><br/>
+  
+  
+  </center>
 
  <!-- VENN FOR PAS -->   
 <hr/>
