update nova prj-1 3

--- a/oncoFinder2/templates/report/report_detail_novartis_prj1.html
+++ b/oncoFinder2/templates/report/report_detail_novartis_prj1.html
@@ -438,7 +438,7 @@
   
   </div>
   
-  
+  <center>
   {%if 'nas' in report.slug %}
   <br/>
   <div>
@@ -469,6 +469,7 @@
   </div>
   
   {%endif%}
+  </center>
   
           
 </div>  <!-- end of hide div -->
