--- a/oncoFinder2/templates/report/report_detail_novartis_prj1.html
+++ b/oncoFinder2/templates/report/report_detail_novartis_prj1.html
@@ -442,11 +442,12 @@
   {%if 'nas' in report.slug %}
   <br/>
   <div>
-  <img src='/media/report-portal/nova_prj1_nas/nasal_heatmap.png' />  
+  <img src='/media/report-portal/nova_prj1_nas/nasal_heatmap.png' style="width:90%"/>  
   <h4>Pathway activation heatmap for Baseline (V3) vs Reference</h4>
   <br/>
-  
-  <img src='/media/report-portal/nova_prj1_nas/nasal_heatmap_all.png' />  
+  <hr style='width:50%'/>
+  <br/>
+  <img src='/media/report-portal/nova_prj1_nas/nasal_heatmap_all.png' style="width:90%" />  
   <h4>Pathway activation heatmap for All Visits vs Reference</h4>
   
   
@@ -458,11 +459,12 @@
   
   <br/>
   <div>
-  <img src='/media/report-portal/nova_prj1_pbmc/pbmc_heatmap.png' />  
+  <img src='/media/report-portal/nova_prj1_pbmc/pbmc_heatmap.png'  style="width:90%"/>  
   <h4>Pathway activation heatmap for Baseline (V3) vs Reference</h4>
   <br/>
-  
-  <img src='/media/report-portal/nova_prj1_pbmc/pbmc_heatmap_all.png' />  
+  <hr style='width:50%'/>
+  <br/>
+  <img src='/media/report-portal/nova_prj1_pbmc/pbmc_heatmap_all.png' style="width:90%"/>  
   <h4>Pathway activation heatmap for All Visits vs Reference</h4>
   
   
