update isnwx report 1

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -158,7 +158,7 @@
  <img src='/media/report-portal/inswx-report/inswx290.png' />
      <br/> <a href='/media/report-portal/inswx-report/Structure3D_CID_54645831.sdf' target='_blank'>Download .sdf file </a>
  </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/54645831' target='_blank'>54645831</a></td>
- <td>&nbsp;</td><td>-7.6</td><td>2866.5981329</td><td>-10.4</td><td>26.02220302</td><td>-11.6</td><td>3.468897381</td><td>-11.7</td>
+ <td>Not available for purchase, refer to <a href="#synthesis">synthesis plan</a></td><td>-7.6</td><td>2866.5981329</td><td>-10.4</td><td>26.02220302</td><td>-11.6</td><td>3.468897381</td><td>-11.7</td>
  <td>2.932662382</td><td>-10.6</td><td>18.59881578</td><td>581.59</td><td>4.95</td><td>100.13</td><td>no</td>
  </tr>
  
@@ -175,7 +175,7 @@
  <img src='/media/report-portal/inswx-report/inswx293.png' />
      <br/> <a href='/media/report-portal/inswx-report/Structure3D_CID_54664940.sdf' target='_blank'>Download .sdf file </a>
  </td><td><a href='https://pubchem.ncbi.nlm.nih.gov/compound/54664940' target='_blank'>54664940</a></td>
- <td>&nbsp;</td><td>-6</td><td>42095.6246332</td><td>-10.6</td><td>18.59881578</td><td>-10.7</td><td>15.72374198</td><td>-11</td>
+ <td>Not available for purchase, refer to <a href="#synthesis">synthesis plan</a></td><td>-6</td><td>42095.6246332</td><td>-10.6</td><td>18.59881578</td><td>-10.7</td><td>15.72374198</td><td>-11</td>
  <td>9.50096584</td><td>-9.7</td><td>84.30430433</td><td>456.51</td><td>4.91</td><td>78.02</td><td>1403839-06-4  ; 1403845-06-6; 1403853-72-4  ; 1403868-12-1 for 4 isomers</td>
  </tr>
  
