update isnwx report 9

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -1470,7 +1470,8 @@ var all_models = $("#ACC2_BC").DataTable( {
     <td>
     <a href='/media/report-portal/inswx-report/ACC2_BC.png' target='_blank' >
     <img src='/media/report-portal/inswx-report/ACC2_BC.png' style="width: 500px"/>
-    </a>
+    </a> <br/>
+    <a href="/media/report-portal/inswx-report/ACC2_BC_WA.pdb" target='_blank'>download .pdb file</a>
     </td>
   </tr>
   <tr>
@@ -1479,7 +1480,8 @@ var all_models = $("#ACC2_BC").DataTable( {
     <td>
     <a href='/media/report-portal/inswx-report/ACC2_CT.png' target='_blank' >
     <img src='/media/report-portal/inswx-report/ACC2_CT.png' style="width: 500px"/>
-    </a>
+    </a><br/>
+    <a href="/media/report-portal/inswx-report/ACC2_CT_WA.pdb" target='_blank'>download .pdb file</a>
     </td>
   </tr>
   <tr>
@@ -1487,21 +1489,24 @@ var all_models = $("#ACC2_BC").DataTable( {
     <td>-8.1</td>
     <td><a href='/media/report-portal/inswx-report/IKKB.png' target='_blank' >
     <img src='/media/report-portal/inswx-report/IKKB.png' style="width: 500px"/>
-    </a></td>
+    </a><br/>
+    <a href="/media/report-portal/inswx-report/IKKB_WA.pdb" target='_blank'>download .pdb file</a></td>
   </tr>
   <tr>
     <td>PDE4B</td>
     <td>-9.2</td>
     <td><a href='/media/report-portal/inswx-report/PDE4B.png' target='_blank' >
     <img src='/media/report-portal/inswx-report/PDE4B.png' style="width: 500px"/>
-    </a></td>
+    </a><br/>
+    <a href="/media/report-portal/inswx-report/PDE4B_WA.pdb" target='_blank'>download .pdb file</a></td>
   </tr>
   <tr>
     <td>PKCb</td>
     <td>-8.5</td>
     <td><a href='/media/report-portal/inswx-report/PKCB.png' target='_blank' >
     <img src='/media/report-portal/inswx-report/PKCB.png' style="width: 500px"/>
-    </a></td>
+    </a><br/>
+    <a href="/media/report-portal/inswx-report/PKCB_WA.pdb" target='_blank'>download .pdb file</a></td>
   </tr>
 
 </tbody>
