--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -236,7 +236,7 @@
 </tr>
 </thead>
 <tbody>
-<tr>
+<tr class="danger">
 <td>INSWX292</td>
 <td> <img src='/media/report-portal/inswx-report/PKCb/INSWX292.png' /><br/>
 
@@ -336,7 +336,7 @@
 <td>0.998</td>
 <td>16.438</td>
 </tr>
-<tr>
+<tr class="danger">
 <td>INSWX294</td>
 <td><img src="/media/report-portal/inswx-report/PKCb/INSWX294.png"><br/>
 <a href="/media/report-portal/inswx-report/PKCb/INSWX294Structure3D_CID_56928031.sdf" target="_blank">download .sdf file</a>
@@ -435,7 +435,7 @@
 <td>1.000</td>
 <td>16.801</td>
 </tr>
-<tr>
+<tr class="danger">
 <td>INSWX703</td>
 <td> <img src="/media/report-portal/inswx-report/PDE4B/INSWX703.png"></td>
 <td>de novo</td>
@@ -532,7 +532,7 @@
 <td>0.653</td>
 <td>10.263</td>
 </tr>
-<tr>
+<tr class="danger">
 <td>INSWX717</td>
 <td> <img src="/media/report-portal/inswx-report/PDE4B/INSWX717.png"></td>
 <td>de novo</td>
@@ -629,7 +629,7 @@
 <td>0.787</td>
 <td>12.403</td>
 </tr>
-<tr>
+<tr class="danger">
 <td>INSWX233</td>
 <td><img src="/media/report-portal/inswx-report/PKCb/INSWX233.png"><br/>
 <a href="/media/report-portal/inswx-report/PKCb/INSWX233Structure3D_CID_16293465.sdf" target="_blank">download .sdf file</a>
@@ -728,7 +728,7 @@
 <td>0.978</td>
 <td>15.138</td>
 </tr>
-<tr>
+<tr class="danger">
 <td>INSWX270</td>
 <td><img src="/media/report-portal/inswx-report/PKCb/INSWX270.png"> </td>
 <td>MolPort-007-688-179 ChemDiv-D122-0027</td>
@@ -825,7 +825,7 @@
 <td>0.995</td>
 <td>16.135</td>
 </tr>
-<tr>
+<tr class="danger">
 <td>INSWX808</td>
 <td> <img src="/media/report-portal/inswx-report/PDE4B/INSWX808.png"> <br/>
 <a href="/media/report-portal/inswx-report/PDE4B/INSWX808.sdf" target="_blank">download .sdf file</a>
@@ -924,7 +924,7 @@
 <td>0.885</td>
 <td>13.977</td>
 </tr>
-<tr>
+<tr class="danger">
 <td>INSWX1036</td>
 <td><img src="/media/report-portal/inswx-report/PKCb/INSWX1036.png"> </td>
 <td>MolPort-039-001-270</td>
@@ -1511,7 +1511,7 @@ var all_models = $("#top_comp").DataTable( {
     </tr>
   </thead>
   <tbody>
-  <tr class="warning">
+  <tr class="danger">
 <td>INSWX294</td>
 <td>C1CN(CCN1C2=CC=CC=C2)C3=C(C(=O)C4=CC=CC=C4C3=O)NC(=O)C5=CC=CC=C5</td>
 <td>PubChem-56928031</td>
@@ -1523,7 +1523,7 @@ var all_models = $("#top_comp").DataTable( {
 <td>69,72</td>
 <td>3,13</td>
 </tr>
-<tr  class="warning">
+<tr  class="danger">
 <td>INSWX292</td>
 <td>C1CN(CC2=CC=CC=C21)C(=O)N3C=C(N=N3)C(C4=CC=CC=C4)(C5=CC=CC=C5)O</td>
 <td>PubChem-50904531</td>
@@ -1535,7 +1535,7 @@ var all_models = $("#top_comp").DataTable( {
 <td>71,25</td>
 <td>3,35</td>
 </tr>
-<tr  class="warning">
+<tr  class="danger">
 <td>INSWX233</td>
 <td>O=C(c1cccc(c1)NC(=O)c1cc(=O)[nH]c2c1cccc2)NCCc1ccc(cc1)S(=O)(=O)N</td>
 <td>Pubchem ID 16293465</td>
@@ -1547,7 +1547,7 @@ var all_models = $("#top_comp").DataTable( {
 <td>159,6</td>
 <td>2,29</td>
 </tr>
-<tr  class="warning">
+<tr  class="danger">
 <td>INSWX270</td>
 <td>Cc1ccccc1Cn1nnc2c1nc(nc2O)[C@@H]1CCCN(C1)C(=O)c1ccccc1Cl</td>
 <td>MolPort-007-688-179 ChemDiv-D122-0027</td>
@@ -1559,7 +1559,7 @@ var all_models = $("#top_comp").DataTable( {
 <td>97,03</td>
 <td>3,57</td>
 </tr>
-<tr  class="warning">
+<tr  class="danger">
 <td>INSWX1036</td>
 <td>OC(CC1CCCC1)Cn1cnc2cnccc2c1=O</td>
 <td>MolPort-039-001-270</td>
@@ -2613,7 +2613,7 @@ var all_models = $("#top_comp").DataTable( {
 <td>126,29</td>
 <td>3,48</td>
 </tr>
-<tr class="warning">
+<tr class="danger">
 <td>INSWX703</td>
 <td>n1[nH]c(=O)c2ccc(F)cc2c1C#CCc1cn(nc1C(=O)O)C</td>
 <td> </td>
@@ -2625,7 +2625,7 @@ var all_models = $("#top_comp").DataTable( {
 <td>100,87</td>
 <td>1,95</td>
 </tr>
-<tr class="warning">
+<tr class="danger">
 <td>INSWX717</td>
 <td>c1(cn(C)nc1C(=O)O)C(CO)C#Cc1n[nH]c(=O)c2c1cc(cc2)F</td>
 <td> </td>
@@ -2721,7 +2721,7 @@ var all_models = $("#top_comp").DataTable( {
 <td>131,27</td>
 <td>1,8</td>
 </tr>
-<tr class="warning">
+<tr class="danger">
 <td>INSWX808</td>
 <td>Cc1ccc(cc1)S(=O)(=O)N(CC(CN1C(=O)NC(C)(C)C1=O)O)c1ccccc1</td>
 <td>ChemDiv-2995-0491 CHEMBL1446132 MolPort-000-735-592 PubChem-3133124</td>
@@ -4210,7 +4210,7 @@ var all_models = $("#ACC2_BC_struct").DataTable( {
  <tr class='warning'><td>INSWX230</td><td>-6.3</td><td>-9.5</td><td>-10</td><td>-9.1</td><td>-9.3</td></tr>
  <tr><td>INSWX231</td><td>-5.9</td><td>-9.9</td><td>-9.5</td><td>-8.2</td><td>-8</td></tr>
  <tr><td>INSWX232</td><td>-5.2</td><td>-8.4</td><td>-8.7</td><td>-8</td><td>-6.7</td></tr>
- <tr class='success'><td>INSWX233</td><td>-6.8</td><td>-10.4</td><td>-10.7</td><td>-10.5</td><td>-8.8</td></tr>
+ <tr class='danger'><td>INSWX233</td><td>-6.8</td><td>-10.4</td><td>-10.7</td><td>-10.5</td><td>-8.8</td></tr>
  <tr><td>INSWX239</td><td>-5.6</td><td>-8.5</td><td>-7.8</td><td>-8.9</td><td>-7.8</td></tr>
  <tr><td>INSWX240</td><td>-5.9</td><td>-8.9</td><td>-9.5</td><td>-8.5</td><td>-8</td></tr>
  <tr><td>INSWX241</td><td>-5.9</td><td>-8.4</td><td>-9.1</td><td>-8.5</td><td>-7.8</td></tr>
@@ -4242,7 +4242,7 @@ var all_models = $("#ACC2_BC_struct").DataTable( {
  <tr><td>INSWX267</td><td>-6</td><td>-9</td><td>-9.2</td><td>-8.5</td><td>-8.7</td></tr>
  <tr><td>INSWX268</td><td>-4.9</td><td>-8.1</td><td>-9.2</td><td>-9.2</td><td>-7.2</td></tr>
  <tr><td>INSWX269</td><td>-5.6</td><td>-8.3</td><td>-8.8</td><td>-8.8</td><td>-7.9</td></tr>
- <tr class='success'><td>INSWX270</td><td>-6.4</td><td>-9.5</td><td>-10.7</td><td>-10.1</td><td>-10</td></tr>
+ <tr class='danger'><td>INSWX270</td><td>-6.4</td><td>-9.5</td><td>-10.7</td><td>-10.1</td><td>-10</td></tr>
  <tr><td>INSWX271</td><td>-5.6</td><td>-7.5</td><td>-8.5</td><td>-8.6</td><td>-6.8</td></tr>
  <tr class='warning'><td>INSWX272</td><td>-5.9</td><td>-8.4</td><td>-10.2</td><td>-10.6</td><td>-9.1</td></tr>
  <tr><td>INSWX273</td><td>-6.4</td><td>-8.4</td><td>-9</td><td>-10.4</td><td>-8.2</td></tr>
@@ -4331,8 +4331,8 @@ var all_models = $("#ACC2_BC_struct").DataTable( {
 <table class=" table table-striped table-bordered">
 <thead><tr class="tableizer-firstrow"><th></th><th>AP-1</th><th>ACC2</th><th>PKCB</th><th>PDE4B</th><th>PDE4C</th></tr></thead><tbody>
  <tr><td>INSWX219</td><td>-6.5</td><td>-8.9</td><td>-10.5</td><td>-8.7</td><td>-8.9</td></tr>
- <tr><td>INSWX233</td><td>-6.8</td><td>-10.4</td><td>-10.7</td><td>-10.5</td><td>-8.8</td></tr>
- <tr><td>INSWX270</td><td>-6.4</td><td>-9.5</td><td>-10.7</td><td>-10.1</td><td>-10</td></tr>
+ <tr class="danger"><td>INSWX233</td><td>-6.8</td><td>-10.4</td><td>-10.7</td><td>-10.5</td><td>-8.8</td></tr>
+ <tr class="danger"><td>INSWX270</td><td>-6.4</td><td>-9.5</td><td>-10.7</td><td>-10.1</td><td>-10</td></tr>
 </tbody></table>
 
 <img src='/media/report-portal/inswx-report/doc1.png'style='width:70%; margin: 0 auto' />
@@ -4424,7 +4424,7 @@ $(function() {
 </tr>
 </thead>
 <tbody>
-<tr class="warning">
+<tr class="danger">
 <td>INSWX294</td>
 <td>C1CN(CCN1C2=CC=CC=C2)C3=C(C(=O)C4=CC=CC=C4C3=O)NC(=O)C5=CC=CC=C5</td>
 <td>PubChem-56928031</td>
@@ -4477,7 +4477,7 @@ $(function() {
 <td>2</td>
 <td>3.66</td>
 </tr>
-<tr class="warning">
+<tr class="danger">
 <td>INSWX292</td>
 <td>C1CN(CC2=CC=CC=C21)C(=O)N3C=C(N=N3)C(C4=CC=CC=C4)(C5=CC=CC=C5)O</td>
 <td>PubChem-50904531</td>
@@ -4530,7 +4530,7 @@ $(function() {
 <td>1</td>
 <td>3.8</td>
 </tr>
-<tr class="warning">
+<tr class="danger">
 <td>INSWX233</td>
 <td>O=C(c1cccc(c1)NC(=O)c1cc(=O)[nH]c2c1cccc2)NCCc1ccc(cc1)S(=O)(=O)N</td>
 <td>Pubchem ID 16293465</td>
@@ -4583,7 +4583,7 @@ $(function() {
 <td>2</td>
 <td>3.1</td>
 </tr>
-<tr class="warning">
+<tr class="danger">
 <td>INSWX270</td>
 <td>Cc1ccccc1Cn1nnc2c1nc(nc2O)[C@@H]1CCCN(C1)C(=O)c1ccccc1Cl</td>
 <td>MolPort-007-688-179 ChemDiv-D122-0027</td>
@@ -4636,7 +4636,7 @@ $(function() {
 <td>2</td>
 <td>3.85</td>
 </tr>
-<tr class="warning">
+<tr class="danger">
 <td>INSWX1036</td>
 <td>OC(CC1CCCC1)Cn1cnc2cnccc2c1=O</td>
 <td>MolPort-039-001-270</td>
@@ -9088,7 +9088,7 @@ $(function() {
 <td>2</td>
 <td>4.04</td>
 </tr>
-<tr class="warning">
+<tr class="danger">
 <td>INSWX703</td>
 <td>n1[nH]c(=O)c2ccc(F)cc2c1C#CCc1cn(nc1C(=O)O)C</td>
 <td> </td>
@@ -9141,7 +9141,7 @@ $(function() {
 <td>0</td>
 <td>2.94</td>
 </tr>
-<tr class="warning">
+<tr class="danger">
 <td>INSWX717</td>
 <td>c1(cn(C)nc1C(=O)O)C(CO)C#Cc1n[nH]c(=O)c2c1cc(cc2)F</td>
 <td> </td>
@@ -9565,7 +9565,7 @@ $(function() {
 <td>1</td>
 <td>3.71</td>
 </tr>
-<tr class="warning">
+<tr class="danger">
 <td>INSWX808</td>
 <td>Cc1ccc(cc1)S(=O)(=O)N(CC(CN1C(=O)NC(C)(C)C1=O)O)c1ccccc1</td>
 <td>ChemDiv-2995-0491 CHEMBL1446132 MolPort-000-735-592 PubChem-3133124</td>
