update isnwx report 14

--- a/oncoFinder2/templates/report/inswx.html
+++ b/oncoFinder2/templates/report/inswx.html
@@ -4423,6 +4423,61 @@ $(function() {
 <td>Synthetic Accessibility</td>
 </tr>
 </thead>
+<tfoot>
+<tr>
+<td></td>
+<td> </td>
+<td> </td>
+<td> </td>
+<td> </td>
+<td><500</td>
+<td>20..70</td>
+<td><40</td>
+<td><0.5</td>
+<td><=15</td>
+<td><=10</td>
+<td><=5</td>
+<td>40..130</td>
+<td><=132</td>
+<td>-0.4..5</td>
+<td>-0.4..5</td>
+<td>-0.4..5</td>
+<td>-0.4..5</td>
+<td>-0.4..5</td>
+<td>-0.4..5</td>
+<td> </td>
+<td>low: if solubility is < 0.01 mg/ml </td>
+<td> </td>
+<td> </td>
+<td> </td>
+<td>low: if solubility is < 0.01 mg/ml</td>
+<td> </td>
+<td> </td>
+<td> </td>
+<td>low: if solubility is < 0.01 mg/ml</td>
+<td> </td>
+<td> </td>
+<td>High/Low</td>
+<td>Yes/No</td>
+<td>Yes/No</td>
+<td>Yes/No</td>
+<td>Yes/No</td>
+<td>Yes/No</td>
+<td>Yes/No</td>
+<td>Yes/No</td>
+<td>-7.39 for water</td>
+<td><2</td>
+<td><2</td>
+<td><2</td>
+<td><2</td>
+<td><2</td>
+<td>0.11-0.85</td>
+<td>0</td>
+<td>0</td>
+<td><2</td>
+<td>1..10</td>
+</tr>
+</tfoot>
 <tbody>
 <tr class="danger">
 <td>INSWX294</td>
